# serializer version: 1
# name: test_cover_snapshot[cover.no_position-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.no_position',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.SHUTTER: 'shutter'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'homee',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 11>,
    'translation_key': None,
    'unique_id': '00055511EECC-2-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_cover_snapshot[cover.no_position-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'shutter',
      'friendly_name': 'No Position',
      'is_closed': True,
      'supported_features': <CoverEntityFeature: 11>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.no_position',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'closed',
  })
# ---
# name: test_cover_snapshot[cover.shutter_with_position_and_slats-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.shutter_with_position_and_slats',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.SHUTTER: 'shutter'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'homee',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 143>,
    'translation_key': None,
    'unique_id': '00055511EECC-3-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_cover_snapshot[cover.shutter_with_position_and_slats-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_position': 100,
      'current_tilt_position': 100,
      'device_class': 'shutter',
      'friendly_name': 'Shutter with position and slats',
      'is_closed': False,
      'supported_features': <CoverEntityFeature: 143>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.shutter_with_position_and_slats',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
# name: test_cover_snapshot[cover.slats_position-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'cover',
    'entity_category': None,
    'entity_id': 'cover.slats_position',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': None,
    'options': dict({
    }),
    'original_device_class': <CoverDeviceClass.SHUTTER: 'shutter'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'homee',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CoverEntityFeature: 176>,
    'translation_key': None,
    'unique_id': '00055511EECC-1-0',
    'unit_of_measurement': None,
  })
# ---
# name: test_cover_snapshot[cover.slats_position-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'current_tilt_position': 65,
      'device_class': 'shutter',
      'friendly_name': 'Slats & Position',
      'is_closed': False,
      'supported_features': <CoverEntityFeature: 176>,
    }),
    'context': <ANY>,
    'entity_id': 'cover.slats_position',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'open',
  })
# ---
